# BOTR-Ground-Sensor-Array

./: CMakeLists.txt  README.md
driver/: CMakeLists.txt  payload.c
includes/: i2c.h  sht31d.h  uart.h
src/: CMakeLists.txt  i2c.c  sht31d.c  uart.c
